# llcoi

./: .hgignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  INSTALL  INSTALL.txt  LICENSE  LICENSE.txt  README  README.md  README.txt  simplecompile.sh
cmakemodules/: FindALLEGRO.cmake  FindOPENINPUT.cmake
contrib/d2/: README.txt  example2.d  main.d
contrib/d2/import/llcoi/: ogre_interface.d  ogre_interface.di  ois_interface.di
interface/: CMakeLists.txt  axisalignedbox_bind.cpp  binding_utils.cpp  binding_utils.h  camera_bind.cpp  colourvalue_bind.cpp  entity_bind.cpp  framelistener_bind.cpp  light_bind.cpp  log_bind.cpp  logmanager_bind.cpp  main.cpp  main.h  manualobject_bind.cpp  meshmanager_bind.cpp  movableobject_bind.cpp  ogre_interface.h  ogre_manager.h  ois_bind.cpp  ois_interface.h  plane_bind.cpp  rendersystem_bind.cpp  rendersystem_bind.h  renderwindow_bind.cpp  resourcegroupmanager_bind.cpp  resourcemanager_bind.cpp  root_bind.cpp  scenemanager_bind.cpp  scenenode_bind.cpp  timer_bind.cpp  vector3_bind.cpp  viewport_bind.cpp  windoweventlistener_bind.cpp
interface/include/: axisalignedbox_bind.h  binding_utils.h  bone_bind.h  camera_bind.h  colourvalue_bind.h  configfile_bind.h  entity_bind.h  framelistener_bind.h  fwd.h  inputmanager_bind.h  keyboard_bind.h  light_bind.h  llcoi.h  log_bind.h  logmanager_bind.h  main.h  manualobject_bind.h  material_bind.h  materialmanager_bind.h  matrix3_bind.h  meshmanager_bind.h  mouse_bind.h  movableobject_bind.h  node_bind.h  ogre_interface.h  ogre_manager.h  ois_interface.h  overlay_bind.h  overlaycontainer_bind.h  overlayelement_bind.h  overlayelementfactory_bind.h  overlaymanager_bind.h  paneloverlayelement_bind.h  pass_bind.h  plane_bind.h  planeboundedvolume_bind.h  quaternion_bind.h  ray_bind.h  renderoperation_bind.h  rendersystem_bind.h  (+21 more)
interface/source/: axisalignedbox_bind.cpp  binding_utils.cpp  bone_bind.cpp  camera_bind.cpp  colourvalue_bind.cpp  configfile_bind.cpp  entity_bind.cpp  framelistener_bind.cpp  inputmanager_bind.cpp  keyboard_bind.cpp  light_bind.cpp  log_bind.cpp  logmanager_bind.cpp  main.cpp  manualobject_bind.cpp  material_bind.cpp  materialmanager_bind.cpp  matrix3_bind.cpp  meshmanager_bind.cpp  mouse_bind.cpp  movableobject_bind.cpp  node_bind.cpp  ois_bind.cpp  overlay_bind.cpp  overlaycontainer_bind.cpp  overlayelement_bind.cpp  overlayelementfactory_bind.cpp  overlaymanager_bind.cpp  paneloverlayelement_bind.cpp  pass_bind.cpp  plane_bind.cpp  planeboundedvolume_bind.cpp  quaternion_bind.cpp  ray_bind.cpp  renderoperation_bind.cpp  rendersystem_bind.cpp  renderwindow_bind.cpp  resource_bind.cpp  resourcegroupmanager_bind.cpp  resourcemanager_bind.cpp  (+17 more)
interface/sources/: inputmanager_bind.cpp  keyboard_bind.cpp  windoweventlistener_bind.cpp
interface/swig/: bind.sh  chicken.i  chicken.sh  chicken_wrap.c  compile-chicken.sh  generate-bindings.lisp  interface.i  llcoi.lisp  ogre.asd  ogre.lisp  ogre.scm  test.lisp  test.scm
llcoiinput/: CMakeLists.txt
llcoiinput/src/: action.c  appstate.c  debug.c  device.c  events.c  joystick.c  keyboard.c  keynames.c  main.c  mouse.c  queue.c
llcoiinput/src/dx9/: dx9.c  dx9.h  dx9_events.c  dx9_translate.c
llcoiinput/src/foo/: foo.c  foo.h
llcoiinput/src/linuxjoy/: linuxjoy.c  linuxjoy.h  linuxjoy_devs.h
llcoiinput/src/unixsignal/: unixsignal.c  unixsignal.h
llcoiinput/src/win32/: win32.c  win32_events.c  win32_translate.c
llcoiinput/src/x11/: x11.c  x11.h  x11_events.c  x11_translate.c
test/: CMakeLists.txt  main.c
